adds reminder email
